tests/models/struct/unnamed/string/fail/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    String
);
fn main() {}
